# foundry-ai-agent-dev

./: .env-sample  .gitignore  README.md  main.py  pyproject.toml
demos/: 1-noaiagent-rag-chatbot.py  2-use-agent-portal-code.py  2-use-portal-agent.py  3-create-simple-agent.py  3-create-simple_agent.py  3a-create-simple-agent-code.py  4-create-full-agent.py  5-agent-fastapi.py  5-full-agent-class.py  6-fastapi-agent.py  ckvstore.py  common.py  logger.py  openaitools.py  vectordb.py
demos/data/: failed_banks.csv  faq.md
demos/services/: agent_base.py  agent_runner.py  agent_service.py  common.py  message_processing.py  openai_service.py  settings_service.py  vectordb_service.py
demos/tools/: email_tool.py  time_tool.py  tools.py  weather_tool.py
