[project]
name = "foundry-ai-agent-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.23.0",
    "click>=8.2.1",
    "fastapi>=0.115.13",
    "openai>=1.107.1",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.3",
]
